# nfs_transform

./: .gitignore  405_nnfs_enviados.txt  405_nnfs_nao_enviados.txt  AVISO VERSAO PYNFE  NFS.rar  README.md  checa_seq_series.py  checa_sequencia_nnfs.py  create-nnfs-database.sql  makefile  makefile[PRECISA_ATUALIZAR]  nNFE_atual  nNFs  nNFs.py  nfs_asdf_enviadas  nfs_complementares.py  nfs_consulta_recibos.py  nfs_db.py  nfs_inutiliza.py  notas_complementares_que_nao_foram_enviadas.py  notas_complementares_que_nao_foram_enviadas.txt  notas_complementares_que_nao_sabemos_se_enviou.old.py  notas_complementares_que_nao_sabemos_se_enviou.py  notas_nao_enviadas.txt  pega_<nNF>.py  pega_ids_de_notas_log_erro_em_autorização.py  pyproject.toml  relatório de erro envio serie 1 de novembro 13-04.md  result_autorizacao_sefaz - Aprh04m1680548553s$d.xml  result_autorizacao_sefaz - Aprh04m1680609827s$d.xml  testa_consultadas.py  testeArgs.py  teste_id  unica nota das 907 que foi enviada 35230446364058000115550020000460721635649658.xml
enviadas/: 35230446364058000115550020000453001079566059envio[1]_2023-04-13T10:56:38:518974.xml  35230446364058000115550020000453001079566059envio[2]_2023-04-13T10:56:38:776229.xml  35230446364058000115550020000453011817089135envio[1]_2023-04-13T10:56:15:448775.xml  35230446364058000115550020000453011817089135envio[2]_2023-04-13T10:56:15:469473.xml  35230446364058000115550020000453031878131306envio[1]_2023-04-13T10:56:28:378374.xml  35230446364058000115550020000453031878131306envio[2]_2023-04-13T10:56:28:608259.xml  35230446364058000115550020000453041657296180envio[1]_2023-04-13T10:56:57:454053.xml  35230446364058000115550020000453041657296180envio[2]_2023-04-13T10:56:57:469065.xml  35230446364058000115550020000453051318677774envio[1]_2023-04-13T10:56:39:703445.xml  (+801 more)
log/: consulta_result_chave_2023-04-10T10:12:29.xml  (+3 more)
(+55 files in other folders)
